apps/dns-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-service
  namespace: default
  labels:
    app: dns-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dns-service
  template:
    metadata:
      labels:
        app: dns-service
    spec:
      serviceAccountName: dns-service-sa
      containers:
        # Container 1: Seu dnsd original (100% preservado com todas as suas flags)
        - name: dnsd
          image: dnsd:2.0
          imagePullPolicy: Never
          args:
            - "-port"
            - "53"
            - "-http-port"
            - "8081"
            - "-zone-file"
            - "/data/records.json"
          ports:
            - name: dns-udp
              containerPort: 53
              hostPort: 53
              protocol: UDP
            - name: http-api
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: dns-storage
              mountPath: /data

        # Container 2: O Sidecar que acabamos de compilar
        - name: ingress-watcher
          image: docker.io/library/ingress-watcher:1.0
          imagePullPolicy: Never
      volumes:
        - name: dns-storage
          hostPath:
            path: /home/opc/dns-data
            type: DirectoryOrCreate
