apps/dns-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns-service-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /dns
            pathType: Prefix
            backend:
              service:
                name: dns-service
                port:
                  number: 8081
